# fastapi-base-repository

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9fc9a90800db_migration.py  c9fa48b957bf_migration.py  dde9a80139ed_migration.py  df4c5dc42a32_migration.py
app/: main.py
app/core/: settings.py
app/core/settingEnv/: base.py  dev.py  local.py  prod.py  test.py
app/db/: connection.py
app/db/models/: User.py
config/: .env.example  requirements.txt
tests/: conftest.py  test_main.py
